kubernetes/apps/ai/mcp/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: ai
  rules:
    - backendRefs:
        - name: mcp
          group: agentgateway.dev
          kind: AgentgatewayBackend
      matches:
        - path:
            type: PathPrefix
            value: /mcp
